# ai-factory

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build.yml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/commands/: bootstrap.rs  library.rs  mcp.rs  memory.rs  mod.rs  provider_detect.rs  provider_presets.rs  repo_manager.rs  runtime.rs  settings.rs  skill_manager.rs  system.rs
app/src-tauri/src/engine/: api_client.rs  bootstrap.rs  generator.rs  guardrails.rs  memory.rs  mod.rs
app/src-tauri/src/models/: config.rs
app/src/components/dashboard/: ConfigSelector.tsx  ProjectCard.tsx
app/src/components/layout/: Layout.tsx  Sidebar.tsx
app/src/components/project/: ActivityFeed.tsx  AgentDetailPanel.tsx  AgentTopologyRing.tsx  CycleTimeline.tsx  LogViewer.tsx  constants.ts
app/src/lib/: i18n.tsx  tauri.ts  types.ts
app/src/routes/: Dashboard.tsx  Library.tsx  NewProject.tsx  ProjectDetail.tsx  Settings.tsx
app/src/styles/: globals.css
factory/: __init__.py  bootstrap.py  cli.py  config.py  evolution.py  generator.py  guardrails.py  memory.py  router.py  runtime.py
scripts/: auto-loop.sh  monitor.sh  stop-loop.sh
templates/: agent.j2  claude_md.j2  consensus_init.j2  prompt_md.j2  settings.j2  skill.j2
